add HTML skeleton

--- a/index.html
+++ b/index.html
@@ -9,6 +9,68 @@
     <title>FAQ's</title>
 </head>
 <body>
+
+    <h1>Frequently Asked Questions</h1>
+    <div class="faq-container">
+        <div class="faq active">
+            <h3 class="faq-title">
+                Why shouldnt we trust atoms?
+            </h3>
+
+            <p class="faq-text">
+                They make up everything 
+            </p>
+
+            <button>
+                <i class="fas fa-chevron-down"></i>
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+
+        <div class="faq">
+            <h3 class="faq-title">
+                Why shouldnt we trust atoms?
+            </h3>
+
+            <p class="faq-text">
+                They make up everything 
+            </p>
+
+            <button>
+                <i class="fas fa-chevron-down"></i>
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        <div class="faq">
+            <h3 class="faq-title">
+                Why shouldnt we trust atoms?
+            </h3>
+
+            <p class="faq-text">
+                They make up everything 
+            </p>
+
+            <button>
+                <i class="fas fa-chevron-down"></i>
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        <div class="faq">
+            <h3 class="faq-title">
+                Why shouldnt we trust atoms?
+            </h3>
+
+            <p class="faq-text">
+                They make up everything 
+            </p>
+
+            <button>
+                <i class="fas fa-chevron-down"></i>
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+
+    </div>
     
 
 
