--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <i class="fas fa-times"></i>
             </button>
         </div>
-        <div class="faq">
+        <div class="faq active">
             <h3 class="faq-title">
                 Why shouldnt we trust atoms?
             </h3>
